# Glint-Hub

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  schema.yml
.github/workflows/: cd.yml  ci.yml
Docker/: Dockerfile  docker-compose.development.yml  docker-compose.production.yml
carts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
carts/migrations/: 0001_initial.py  0002_alter_cart_products.py  0002_initial.py  0003_alter_cart_products_and_more.py  0004_alter_cart_products.py  0005_alter_cartproduct_unique_together_and_more.py
config/: asgi.py  celery.py  settings.py  tasks.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py  test.py
config/static/: index.html
nginx/: Dockerfile  nginx.conf
orders/: admin.py  models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_initial.py  0003_alter_orderproduct_product_quantity.py  0004_order_address.py  0005_alter_order_total_price.py  0006_order_note.py
products/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
products/migrations/: 0001_initial.py  0002_alter_product_in_stock.py  0002_alter_product_in_stock_alter_product_picture.py
transactions/: admin.py  models.py  urls.py  views.py
transactions/migrations/: 0001_initial.py  0002_alter_transaction_card_num.py  0003_transaction_authority.py
users/: authentication.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_alter_user_email.py  0004_alter_user_email.py  0005_alter_user_email.py  0006_alter_user_email.py  0007_alter_user_email.py  0008_alter_user_email.py  0009_user_is_email_verified.py
utils/: document.py  generic.py  order.py  product.py  verification.py
