[tool.poetry]
name = "glinthub"
version = "0.8.0"
description = "API for an online shop selling gold products"
authors = ["Ali Sarbakhshi"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.3"
celery = "^5.4.0"
django-filter = "^24.3"
djangorestframework = "^3.15.2"
drf-spectacular = "^0.27.2"
requests = "^2.32.3"
djangorestframework-simplejwt = "^5.3.1"
pillow = "^11.0.0"
python-dotenv = "^1.0.1"
redis = "^5.2.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
